@@ -1,3 +1,10 @@
+2012-11-14  Fabien Chêne  <fabien@gcc.gnu.org>
+
+	PR c++/11750
+	* call.c (build_new_method_call_1): Check that the instance type
+	and the function context are the same before setting the flag
+	LOOKUP_NONVIRTUAL.
+
 2012-11-13  Sriraman Tallam  <tmsriram@google.com>
 
 	* testsuite/g++.dg/mv4.C: Add require ifunc. Change error message.
